x overflow bug fixed

--- a/frontend-ts/src/index.css
+++ b/frontend-ts/src/index.css
@@ -13,6 +13,5 @@ code {
 }
 
 html {
-  margin-left: calc(100vw - 100%);
-  margin-right: 0;
+  overflow-y:scroll;
 }
